# src/ChefKnife.Display.WebAPI/DTOs/AIC/AicExhibition.cs
@@ -1,0 +1,15 @@
+using Newtonsoft.Json;
+
+namespace ChefKnife.Display.WebAPI.DTOs.AIC;
+
+public class AicExhibition
+{
+    [JsonProperty("id")]
+    public int Id { get; set; }
+
+    [JsonProperty("title")]
+    public string Title { get; set; }
+
+    [JsonProperty("artwork_ids")]
+    public int[] ArtworkIds { get; set; }
+}
